refactoring: use AlertBuilder
* rewrote disclaimer checker to use AlertBuilder